force-app/main/default/objects/Inward_Declaration__c/Inward_Declaration__c.object-meta.xml
<CustomObject>
    <label>Inward Declaration</label>
    <nameField>
        <label>Inward Declaration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inward Declarations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>