force-app/main/default/objects/Inward_Declaration__c/fields/C_C_ID_on_TradeNet__c.field-meta.xml
<CustomField>
    <fullName>C_C_ID_on_TradeNet__c</fullName>
    <defaultValue>&quot;200101111R&quot;</defaultValue>
    <label>C&amp;C ID on TradeNet</label>
    <length>30</length>
    <type>Text</type>
</CustomField>