force-app/main/default/objects/Inward_Declaration__c/fields/Common_Access_Reference_CAR_Type__c.field-meta.xml
<CustomField>
    <fullName>Common_Access_Reference_CAR_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Common Access Reference (CAR) Type</label>
    <referenceTo>CAR_Type_Code__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>