force-app/main/default/objects/Inward_Declaration__c/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Origin</label>
    <referenceTo>Country_of_Origin__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>