force-app/main/default/objects/Inward_Declaration__c/fields/Declarant_Person__c.field-meta.xml
<CustomField>
    <fullName>Declarant_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Declarant (Person) Name</label>
    <referenceTo>Declarant_Person__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>