force-app/main/default/objects/Inward_Declaration__c/fields/Franchise_Code__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Code__c</fullName>
    <description>This field is for GetsAsia Intergration</description>
    <formula>TEXT(Vehicle_Shipment__r.Franchise_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franchise Code</label>
    <type>Text</type>
</CustomField>