force-app/main/default/objects/Inward_Declaration__c/fields/Inward_Declaration_Seq_No__c.field-meta.xml
<CustomField>
    <fullName>Inward_Declaration_Seq_No__c</fullName>
    <label>Inward Declaration Seq No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>