force-app/main/default/objects/Inward_Declaration__c/fields/Shipment_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Line Item</label>
    <referenceTo>Shipment_Line_Item__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>