force-app/main/default/objects/Inward_Declaration__c/fields/Stock_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>Stock_Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Vehicle Master</label>
    <referenceTo>Vehicle_Master2__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>