force-app/main/default/objects/Inward_Declaration__c/fields/TN_B_L_No__c.field-meta.xml
<CustomField>
    <fullName>TN_B_L_No__c</fullName>
    <label>TN B/L No.</label>
    <length>35</length>
    <type>Text</type>
</CustomField>