force-app/main/default/objects/Inward_Declaration__c/fields/TN_Car_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_Car_Type_Code__c</fullName>
    <formula>Common_Access_Reference_CAR_Type__r.CAR_Type_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Car Type Code</label>
    <type>Text</type>
</CustomField>