force-app/main/default/objects/Inward_Declaration__c/fields/TN_Cargo_Pack_Type__c.field-meta.xml
<CustomField>
    <fullName>TN_Cargo_Pack_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Cargo Pack Type</label>
    <referenceTo>TN_Cargo_Pack_Type_Name__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>