force-app/main/default/objects/Inward_Declaration__c/fields/TN_Cargo_Pack_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_Cargo_Pack_Type_Code__c</fullName>
    <formula>TN_Cargo_Pack_Type__r.TN_Packing_Type_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Cargo Pack Type Code</label>
    <type>Text</type>
</CustomField>