force-app/main/default/objects/Inward_Declaration__c/fields/TN_Country_of_Origin_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_Country_of_Origin_Code__c</fullName>
    <formula>Country_of_Origin__r.Country_of_Origin_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Country of Origin Code</label>
    <type>Text</type>
</CustomField>