force-app/main/default/objects/Inward_Declaration__c/fields/TN_Declarant_Entity_Identifier__c.field-meta.xml
<CustomField>
    <fullName>TN_Declarant_Entity_Identifier__c</fullName>
    <formula>TN_Declarant_Name__r.Declarant_Entity_Identifier__c</formula>
    <label>TN Declarant Entity Identifier</label>
    <type>Text</type>
</CustomField>