force-app/main/default/objects/Inward_Declaration__c/fields/TN_Declarant_Name__c.field-meta.xml
<CustomField>
    <fullName>TN_Declarant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Declarant Name</label>
    <referenceTo>Declarant_Name__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>