force-app/main/default/objects/Inward_Declaration__c/fields/TN_Declarant_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>TN_Declarant_Person_Phone__c</fullName>
    <formula>Declarant_Person__r.Declarant_Person_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN_Declarant Person Phone</label>
    <type>Text</type>
</CustomField>