force-app/main/default/objects/Inward_Declaration__c/fields/TN_Declaration_Indicator__c.field-meta.xml
<CustomField>
    <fullName>TN_Declaration_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TN Declaration Indicator</label>
    <type>Checkbox</type>
</CustomField>