force-app/main/default/objects/Inward_Declaration__c/fields/TN_Declaration_Type__c.field-meta.xml
<CustomField>
    <fullName>TN_Declaration_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Declaration Type</label>
    <referenceTo>Declaration_Type__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>