force-app/main/default/objects/Inward_Declaration__c/fields/TN_Declaration_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_Declaration_Type_Code__c</fullName>
    <formula>TN_Declaration_Type__r.Declaration_Type_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Declaration Type Code</label>
    <type>Text</type>
</CustomField>