force-app/main/default/objects/Inward_Declaration__c/fields/TN_ETA__c.field-meta.xml
<CustomField>
    <fullName>TN_ETA__c</fullName>
    <label>TN ETA</label>
    <type>Date</type>
</CustomField>