force-app/main/default/objects/Inward_Declaration__c/fields/TN_Importer_Entity_Identifier__c.field-meta.xml
<CustomField>
    <fullName>TN_Importer_Entity_Identifier__c</fullName>
    <formula>TN_Importer_Name__r.Declarant_Entity_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Importer Entity Identifier</label>
    <type>Text</type>
</CustomField>