force-app/main/default/objects/Inward_Declaration__c/fields/TN_Importer_Name__c.field-meta.xml
<CustomField>
    <fullName>TN_Importer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Importer Name</label>
    <referenceTo>Declarant_Name__c</referenceTo>
    <relationshipLabel>Inward Declarations (TN Importer Name)</relationshipLabel>
    <relationshipName>Inward_Declarations1</relationshipName>
    <type>Lookup</type>
</CustomField>