force-app/main/default/objects/Inward_Declaration__c/fields/TN_Inward_Carrier_Entity_Identifier__c.field-meta.xml
<CustomField>
    <fullName>TN_Inward_Carrier_Entity_Identifier__c</fullName>
    <formula>TN_Inward_Carrier_Name__r.Inward_Carrier_Agent_Entity_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Inward Carrier Entity Identifier</label>
    <type>Text</type>
</CustomField>