force-app/main/default/objects/Inward_Declaration__c/fields/TN_Inward_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>TN_Inward_Carrier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Inward Carrier Name</label>
    <referenceTo>Inward_Carrier__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations2</relationshipName>
    <type>Lookup</type>
</CustomField>