force-app/main/default/objects/Inward_Declaration__c/fields/TN_Message_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>TN_Message_Ref_No__c</fullName>
    <label>TN Message Ref. No.</label>
    <length>14</length>
    <type>Text</type>
</CustomField>