force-app/main/default/objects/Inward_Declaration__c/fields/TN_Permit_No__c.field-meta.xml
<CustomField>
    <fullName>TN_Permit_No__c</fullName>
    <label>Permit No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>