force-app/main/default/objects/Inward_Declaration__c/fields/TN_Port_of_Loading_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_Port_of_Loading_Code__c</fullName>
    <formula>TN_Port_of_Loading_Name__r.Port_of_Loading_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Port of Loading Code</label>
    <type>Text</type>
</CustomField>