force-app/main/default/objects/Inward_Declaration__c/fields/TN_Port_of_Loading_Name__c.field-meta.xml
<CustomField>
    <fullName>TN_Port_of_Loading_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Port of Loading Name</label>
    <referenceTo>Port_of_Loading__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>