force-app/main/default/objects/Inward_Declaration__c/fields/TN_Receipt_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>TN_Receipt_Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Receipt Location Name</label>
    <referenceTo>Local_Type_Code__c</referenceTo>
    <relationshipLabel>Inward Declarations (TN Receipt Location Name)</relationshipLabel>
    <relationshipName>Inward_Declarations1</relationshipName>
    <type>Lookup</type>
</CustomField>