force-app/main/default/objects/Inward_Declaration__c/fields/TN_Recipient_ID__c.field-meta.xml
<CustomField>
    <fullName>TN_Recipient_ID__c</fullName>
    <defaultValue>&quot;TRW1.TRW1001&quot;</defaultValue>
    <label>TN Recipient ID</label>
    <length>17</length>
    <type>Text</type>
</CustomField>