force-app/main/default/objects/Inward_Declaration__c/fields/TN_Release_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_Release_Location_Code__c</fullName>
    <formula>TN_Release_Location_Name__r.Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Release Location Code</label>
    <type>Text</type>
</CustomField>