force-app/main/default/objects/Inward_Declaration__c/fields/TN_Release_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>TN_Release_Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Release Location Name</label>
    <referenceTo>Local_Type_Code__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>