force-app/main/default/objects/Inward_Declaration__c/fields/TN_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>TN_Shipment_Date__c</fullName>
    <label>TN Shipment Date</label>
    <type>Date</type>
</CustomField>