force-app/main/default/objects/Inward_Declaration__c/fields/TN_Storage_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>TN_Storage_Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Storage Location Name</label>
    <referenceTo>Local_Type_Code__c</referenceTo>
    <relationshipLabel>Inward Declarations (TN Storage Location Name)</relationshipLabel>
    <relationshipName>Inward_Declarations2</relationshipName>
    <type>Lookup</type>
</CustomField>