force-app/main/default/objects/Inward_Declaration__c/fields/TN_Total_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>TN_Total_Gross_Weight__c</fullName>
    <label>TN Total Gross Weight</label>
    <precision>14</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>