force-app/main/default/objects/Inward_Declaration__c/fields/TN_Total_Gross_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>TN_Total_Gross_Weight_UOM__c</fullName>
    <defaultValue>&quot;TNE&quot;</defaultValue>
    <label>TN Total Gross Weight UOM</label>
    <length>3</length>
    <type>Text</type>
</CustomField>