force-app/main/default/objects/Inward_Declaration__c/fields/TN_Total_Outer_Pack__c.field-meta.xml
<CustomField>
    <fullName>TN_Total_Outer_Pack__c</fullName>
    <label>TN Total Outer Pack</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>