force-app/main/default/objects/Inward_Declaration__c/fields/TN_Transport_Mode_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_Transport_Mode_Code__c</fullName>
    <formula>Transport_Mode_Name__r.Transport_Mode_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Transport Mode Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>