force-app/main/default/objects/Inward_Declaration__c/fields/TN_Vessel_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_Vessel_Code__c</fullName>
    <label>TN Vessel Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>