force-app/main/default/objects/Inward_Declaration__c/fields/TN_Vessel_Name__c.field-meta.xml
<CustomField>
    <fullName>TN_Vessel_Name__c</fullName>
    <inlineHelpText>tpt_id</inlineHelpText>
    <label>TN Vessel Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>