force-app/main/default/objects/Inward_Declaration__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>GetsAsia Job No.</description>
    <label>TN Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>