force-app/main/default/objects/Inward_Declaration__c/fields/Transport_Mode_Name__c.field-meta.xml
<CustomField>
    <fullName>Transport_Mode_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Mode Name</label>
    <referenceTo>Transport_Mode__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>