force-app/main/default/objects/Inward_Declaration__c/fields/Unique_Ref_No_Date__c.field-meta.xml
<CustomField>
    <fullName>Unique_Ref_No_Date__c</fullName>
    <description>This field is used for integration with getsAsia. Populated in trigger.</description>
    <inlineHelpText>This field is used for integration with getsAsia. Populated in trigger.</inlineHelpText>
    <label>Unique Ref. No. Date</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>