force-app/main/default/objects/Inward_Declaration__c/fields/Vehicle_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Shipment</label>
    <referenceTo>Vehicle_Shipment__c</referenceTo>
    <relationshipLabel>Inward Declarations</relationshipLabel>
    <relationshipName>Inward_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>