force-app/main/default/objects/Inward_Declaration__c/recordTypes/Inward_Non_Payment.recordType-meta.xml
<RecordType>
    <fullName>Inward_Non_Payment</fullName>
    <active>true</active>
    <label>Inward Non Payment</label>
</RecordType>