force-app/main/default/objects/Inward_Declaration__c/recordTypes/Inward_Payment.recordType-meta.xml
<RecordType>
    <fullName>Inward_Payment</fullName>
    <active>true</active>
    <label>Inward Payment</label>
</RecordType>