force-app/main/default/objects/Inward_Declaration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transaction_ID__c</columns>
    <columns>Status__c</columns>
    <columns>TN_Vessel_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>TN_Permit_No__c</columns>
    <columns>TN_Total_Outer_Pack__c</columns>
    <columns>TN_Total_Gross_Weight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>